--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mdcheck"
 version = "0.1.0"
 description = "Markdown checker with optional local LLM advice via Ollama"
 requires-python = ">=3.11"
-dependencies = ["requests"]
+dependencies = ["requests", "python-dotenv"]
 
 [tool.pyrefly]
 project-includes = [
