--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pymdown-extensions>=10.5.0",
     "pygments>=2.17.0",
     "pyinstaller>=6.18.0",
+    "nuitka>=2.8.10",
 ]
 
 [tool.pyrefly]
